[package]
name = "sgp4-rs"
version = "0.1.0"
authors = ["Nick Pascucci <nick.pascucci@spire.com>"]
edition = "2018"

description = "Rust wrapper around the Vallado SGP-4 orbital propagator."
repository = "https://github.com/nsat/sgp4-rs"
keywords = ["sgp4", "orbital-mechanics", "two-line-element", "astrophysics"]
categories = ["api-bindings", "science", "simulation"]
readme = "README.md"
license = "MIT"

build = "build.rs"
links = "static=sgp4"

[dependencies]
chrono = { version="0.4" }
itertools = "0.9.0"
time = "0.2.16"
libc = "0.2.71"
thiserror = "1.0"

[build-dependencies]
cc = "1.0"