[package]
name = "sgp4-rs"
version = "0.3.2"
authors = ["Nick Pascucci <nick.pascucci@spire.com>"]
edition = "2021"

description = "Rust wrapper around the Vallado SGP-4 orbital propagator."
repository = "https://github.com/nsat/sgp4-rs"
keywords = ["sgp4", "orbital-mechanics", "two-line-element", "astrophysics"]
categories = ["api-bindings", "science", "simulation"]
readme = "README.md"
license = "MIT"

build = "build.rs"
links = "static=sgp4"

[features]
# Experimental support for creating TLEs from orbital elements
tlegen = []

[dependencies]
chrono = { version="0.4", default-features=false }
thiserror = "1.0"
uom = "0.32.0"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
float-cmp = "0.9"
